--- a/front-end/src/app/globals.css
+++ b/front-end/src/app/globals.css
@@ -23,6 +23,6 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, sans-serif;
   font-family: "Poppins", sans-serif;
 }
